Fix button sizes and spacing

--- a/hsreplaynet/static/styles/home_new.scss
+++ b/hsreplaynet/static/styles/home_new.scss
@@ -295,7 +295,7 @@
 	color: white;
 
 	.card-panel {
-		height: 270px;
+		height: 285px;
 		position: relative;
 		overflow: hidden;
 		margin-top: 80px;
@@ -339,7 +339,7 @@
 		position: absolute;
 		top: 55px;
 		height: calc(100% - 72px);
-		width: calc(100% - 32px);
+		width: calc(100% - 12px);
 		display: flex;
 		flex-direction: column;
 	}
@@ -390,7 +390,7 @@
 	}
 
 	.promo-button {
-		margin: 0 15px 15px;
+		margin: 5px 15px;
 		width: calc(100% - 32px);
 	}
 }
@@ -506,6 +506,7 @@
 
 	.promo-button {
 		margin: 0 15px 15px 15px;
+		width: calc(100% - 32px);
 	}
 }
 
